# dmgee

./: .gitignore  .gitmodules  CMakeLists.txt  Info.plist.in  README.md  contributing.md  dmgee.dmgee
assets/: Target.afdesign  add.afdesign  build.afdesign  cross.afdesign  dmg_background.afdesign  dmg_background@1x.tiff  dmg_background@2x.tiff  dmgee.icns  dots.afdesign  general.afdesign  github-social-preview.afdesign  load.afdesign  save.afdesign  splashscreen.afdesign  template.afdesign  tick.afdesign  user.afdesign  variable-add.afdesign  variable-delete.afdesign  variable-edit.afdesign  variable-new.afdesign
docs/: Doxyfile
hterm/: hterm.css  hterm.js  hterm_deps.js  hterm_resources.js  index.html  qwebchannel.js
images/: dmg_background.tiff  dmg_background@2x.tiff
libs/Ribbon/: CMakeLists.txt  DarkStyle.css  DarkStyle.qss  LightStyle.css  LightStyle.qss  RibbonButton.cpp  RibbonButton.h  RibbonButtonPlugin.cpp  RibbonButtonPlugin.h  RibbonCheckBox.cpp  RibbonCheckBox.h  RibbonCheckBoxPlugin.cpp  RibbonCheckBoxPlugin.h  RibbonComboBox.cpp  RibbonComboBox.h  RibbonComboBoxPlugin.cpp  RibbonComboBoxPlugin.h  RibbonDropButton.cpp  RibbonDropButton.h  RibbonDropButtonPlugin.cpp  RibbonDropButtonPlugin.h  RibbonFontManager.cpp  RibbonFontManager.h  RibbonGroup.cpp  RibbonGroup.h  RibbonGroupPlugin.cpp  RibbonGroupPlugin.h  RibbonLineEdit.cpp  RibbonLineEdit.h  RibbonLineEditPlugin.cpp  RibbonLineEditPlugin.h  RibbonPushButton.cpp  RibbonPushButton.h  RibbonPushButtonPlugin.cpp  RibbonPushButtonPlugin.h  RibbonResources.qrc  RibbonSlider.cpp  RibbonSlider.h  RibbonSliderPlugin.cpp  RibbonSliderPlugin.h  (+12 more)
libs/Ribbon/assets/: arrows.afdesign  checkbox.afdesign
python/: build.py  dmgconf.py
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AnsiEscape.cpp  AnsiEscape.h  Builder.cpp  Builder.h  BulletWidget.cpp  BulletWidget.h  ChooseALicenseLicence.cpp  ChooseALicenseLicence.h  ChooseALicenseLicenceWidget.cpp  ChooseALicenseLicenceWidget.h  ChooseALicenseLicenceWidget.ui  FlatTabBar.cpp  FlatTabBar.h  FlatTabWidget.cpp  FlatTabWidget.h  Font.h  Font.mm  GeneralSettingsPage.cpp  GeneralSettingsPage.h  GeneralSettingsPage.ui  GridGraphicsScene.cpp  GridGraphicsScene.h  HTermApi.cpp  HTermApi.h  HTermWidget.cpp  HTermWidget.h  Helper.cpp  Helper.h  ILicence.h  ILicense.h  ISettingsPage.h  Image.cpp  Image.h  ImageLoader.h  ImageLoader.mm  LicenceTemplatesSettingsPage.cpp  LicenceTemplatesSettingsPage.h  (+41 more)
tests/: CMakeLists.txt  tests.cpp
translations/: dmgee_en.ts
